--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -86,7 +86,8 @@
 
 
     <!-- 分享 -->
-    <div class="share share-blank">
+    <div class=" share-blank">
+    <div class="share">
         <span>分享给好友</span>
         <ul class="share-list">
             <li>
@@ -123,53 +124,66 @@
     <div class="footer_navbar">
         <ul>
             <li class="footer_navbar_li">
-                <a  class="right" href="#">
-                    <img src="./image/meitijieshao.png"/>
-                    <span class="text">媒体介绍</span>
+                <a  class="right" href="./aboutus.html">
+                    <img src="./image/ahoutus-blue.png"/>
+                    <span class="text-blue">关于我们</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
-                <img src="./image/lianluowomen.png"/>
+                <img src="./image/welcome-blue.png"/>
+                <a class="left" href="./shehuizeren.html">
+                    <span class="text-blue">社会责任</span>
+                </a>
+            </li>
+            <li class="footer_navbar_li">
+                <a  class="right" href="#">
+                    <img src="./image/meitijieshao-blue.png"/>
+                    <span class="text-blue">媒体介绍</span>
+                </a>
+            </li>
+            <li class="footer_navbar_li">
+                <img src="./image/lianluowomen-blue.png"/>
                 <a class="left" href="./lianxiwomen.html">
-                    <span class="text">联络我们</span>
+                    <span class="text-blue">联络我们</span>
                 </a>
             </li>
 
             <li class="footer_navbar_li">
                 <a  class="right" href="mailto:service@winnovator.com">
-                    <img src="./image/zaixiankefu.png"/>
-                    <span class="text">在线客服</span>
+                    <img src="./image/zaixiankefu-blue.png"/>
+                    <span class="text-blue">在线客服</span>
                 </a>
             </li>
             <li class="footer_navbar_li">
-                <img src="./image/hezuohuoban.png"/>
+                <img src="./image/hezuohuoban-blue.png"/>
                 <div class="right" style="position: relative;">
-                    <span class="text">合作伙伴</span>
+                    <span class="text-blue">合作伙伴</span>
                     <select>
-                        <option value="">剑桥大学幸福研究院</option>
-                        <option value="">联动天翼科技有限公司</option>
-                        <option value="">全球华人积极心理学会</option>
-                        <option value="">哈弗大学医学院教练中心</option>
+                        <option><a href="http://www.cwichina.org">剑桥大学幸福研究院</a></option>
+                        <option><a href="http://www.linkdata.com.cn">联动天翼科技有限公司</a></option>
+                        <option><a href="http://www.globalcppa.org">全球华人积极心理学会</a></option>
+                        <option><a>哈佛大学医学院教练中心</a></option>
                     </select>
                 </div>
             </li>
 
             <!--  条款 -->
-            <li>
-                <div class="policy">
+            <li style="margin-top: 20px">
+                <div class="policy-blue">
                     <a href="#"><span>隐私政策</span></a>
                     <a href="#"><span>使用条款</span></a>
                 </div>
 
             </li>
             <li>
-                <div class="copyright">
+                <div class="copyright-blue">
                     Copyright© 2015 幸福创客 版权所有
                 </div>
 
             </li>
         </ul>
 
+    </div>
     </div>
 </div>
 <script>
