--- a/mobile/index.html
+++ b/mobile/index.html
@@ -10,7 +10,8 @@
 
     <script type="text/javascript" src="./js/jquery-1.10.2.min.js"></script>
 </head>
-<body onselectstart="return false" oncontextmenu="window.event.returnValue=false" onpaste="return false;" oncopy="return false;" oncut="return false;">
+<body>
+<!--onselectstart="return false" oncontextmenu="window.event.returnValue=false" onpaste="return false;" oncopy="return false;" oncut="return false;"-->
 
     <!-- 导航 -->
     <div class="my_nav">
@@ -30,142 +31,154 @@
         </a>
     </div>
 
-    <div class="my_page">
-        <a href="#">
-            <img class="info_img" src="./image/first.jpg"/>
-        </a>
+    <div class="my_page" style="background-color: white">
+
 
         <!-- 菜单 -->
-        <ul class="main-nav-list">
-            <li >
-                <a href="./aboutus.html">
-                    <img src="./image/ahoutus.png">
-                    <span>关于我们</span>
-                </a>
-            </li>
-            <li>
-                <a href="./chanpinfuwu.html">
-                    <img src="./image/products.png">
-                    <span>产品服务</span>
-                </a>
-            </li>
-            <li>
-                <a href="./zhuanjia.html">
-                    <img src="./image/team.png">
-                    <span>专家库</span>
-                </a>
-            </li>
-            <li>
-                <a href="shehuizeren.html">
-                    <img src="./image/welcome.png">
-                    <span style="">社会责任</span>
-                </a>
-            </li>
-        </ul>
+        <!--<ul class="main-nav-list">-->
+            <!--<li >-->
+                <!--<a href="./aboutus.html">-->
+                    <!--<img src="./image/ahoutus.png">-->
+                    <!--<span>关于我们</span>-->
+                <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="./chanpinfuwu.html">-->
+                    <!--<img src="./image/products.png">-->
+                    <!--<span>产品服务</span>-->
+                <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="./zhuanjia.html">-->
+                    <!--<img src="./image/team.png">-->
+                    <!--<span>专家库</span>-->
+                <!--</a>-->
+            <!--</li>-->
+            <!--<li>-->
+                <!--<a href="shehuizeren.html">-->
+                    <!--<img src="./image/welcome.png">-->
+                    <!--<span style="">社会责任</span>-->
+                <!--</a>-->
+            <!--</li>-->
+        <!--</ul>-->
 
 
         <a href="./used.html">
-            <img class="info_img" src="./image/first_second.jpg"/>
+            <img class="info_img" src="./image/wipro.jpg"/>
         </a>
         <a href="./airobot.html">
-            <img class="info_img" src="./image/third.jpg"/>
+            <img class="info_img" src="./image/airobot.png"/>
         </a>
-        <!--<a href="./zhuanjia.html">-->
-            <!--<img class="info_img" src="./image/four.jpg"/>-->
-        <!--</a>-->
+        <a href="./zhuanjia.html">
+            <img class="info_img" src="./image/experts.jpg"/>
+        </a>
         <a href="./ourteam.html">
-            <img class="info_img" src="./image/five.jpg"/>
+            <img class="info_img" src="./image/learnmore.jpg"/>
         </a>
         <a href="./welcome.html ">
-            <img class="info_img" src="./image/six.jpg"/>
+            <img class="info_img" src="./image/joinus.jpg"/>
         </a>
 
 
         <!-- 分享 -->
-        <div class="share share-blank">
-            <span>分享给好友</span>
-            <ul class="share-list">
-                <li>
-                    <a class="share-icon"
-                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-img="./image/facebook.png"
-                       data-platform="facebook" data-title="" data-type="facebook"
-                       data-url="http://winnovator.com"
-                       data-ajax="false">
-                        <img src="./image/facebook.png"/>
+        <div class=" share-blank">
+            <div class="share">
+                <span>分享给好友</span>
+                <ul class="share-list">
+                    <li>
+                        <a class="share-icon"
+                           data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                           data-img="./image/facebook.png"
+                           data-platform="facebook" data-title="" data-type="facebook"
+                           data-url="http://winnovator.com"
+                           data-ajax="false">
+                            <img src="./image/facebook.png"/>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="share-icon"
+                           data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                           data-img="./image/weixin.png"
+                           data-platform="weibo" data-title="" data-type="weibo"
+                           data-url="http://winnovator.com"
+                           data-ajax="false">
+                            <img src="./image/weibo.png"/>
+                        </a>
+                    </li>
+                    <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                           data-img="./image/weixin.png"
+                           data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
+                           data-ajax="false">
+                        <img src="./image/weixin_icon.png"/>
                     </a>
-                </li>
-                <li>
-                    <a class="share-icon"
-                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-img="./image/weixin.png"
-                       data-platform="weibo" data-title="" data-type="weibo"
-                       data-url="http://winnovator.com"
-                       data-ajax="false">
-                        <img src="./image/weibo.png"/>
-                    </a>
-                </li>
-                <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-img="./image/weixin.png"
-                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
-                       data-ajax="false">
-                    <img src="./image/weixin_icon.png"/>
-                </a>
-                </li>
-            </ul>
-        </div>
+                    </li>
+                </ul>
+            </div>
 
 
-        <div class="footer_navbar">
+            <div class="footer_navbar">
             <ul>
                 <li class="footer_navbar_li">
-                    <a  class="right" href="#">
-                        <img src="./image/meitijieshao.png"/>
-                        <span class="text">媒体介绍</span>
+                    <a  class="right" href="./aboutus.html">
+                        <img src="./image/ahoutus-blue.png"/>
+                        <span class="text-blue">关于我们</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <img src="./image/lianluowomen.png"/>
+                    <img src="./image/welcome-blue.png"/>
+                    <a class="left" href="./shehuizeren.html">
+                        <span class="text-blue">社会责任</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <a  class="right" href="#">
+                        <img src="./image/meitijieshao-blue.png"/>
+                        <span class="text-blue">媒体介绍</span>
+                    </a>
+                </li>
+                <li class="footer_navbar_li">
+                    <img src="./image/lianluowomen-blue.png"/>
                     <a class="left" href="./lianxiwomen.html">
-                        <span class="text">联络我们</span>
+                        <span class="text-blue">联络我们</span>
                     </a>
                 </li>
 
                 <li class="footer_navbar_li">
                     <a  class="right" href="mailto:service@winnovator.com">
-                        <img src="./image/zaixiankefu.png"/>
-                        <span class="text">在线客服</span>
+                        <img src="./image/zaixiankefu-blue.png"/>
+                        <span class="text-blue">在线客服</span>
                     </a>
                 </li>
                 <li class="footer_navbar_li">
-                    <img src="./image/hezuohuoban.png"/>
+                    <img src="./image/hezuohuoban-blue.png"/>
                     <div class="right" style="position: relative;">
-                        <span class="text">合作伙伴</span>
+                        <span class="text-blue">合作伙伴</span>
                         <select>
-                            <option value="">剑桥大学幸福研究院</option>
-                            <option value="">联动天翼科技有限公司</option>
-                            <option value="">全球华人积极心理学会</option>
-                            <option value="">哈弗大学医学院教练中心</option>
+                            <option><a href="http://www.cwichina.org">剑桥大学幸福研究院</a></option>
+                            <option><a href="http://www.linkdata.com.cn">联动天翼科技有限公司</a></option>
+                            <option><a href="http://www.globalcppa.org">全球华人积极心理学会</a></option>
+                            <option><a>哈佛大学医学院教练中心</a></option>
                         </select>
                     </div>
                 </li>
 
                 <!--  条款 -->
-                <li>
-                    <div class="policy">
+                <li style="margin-top: 20px">
+                    <div class="policy-blue">
                         <a href="#"><span>隐私政策</span></a>
                         <a href="#"><span>使用条款</span></a>
                     </div>
 
                 </li>
                 <li>
-                    <div class="copyright">
+                    <div class="copyright-blue">
                         Copyright© 2015 幸福创客 版权所有
                     </div>
 
                 </li>
             </ul>
 
+        </div>
         </div>
     </div>
 
