--- a/mobile/shehuizeren.html
+++ b/mobile/shehuizeren.html
@@ -128,6 +128,18 @@
     <div class="footer_navbar">
         <ul>
             <li class="footer_navbar_li">
+                <a  class="right" href="./aboutus.html">
+                    <img src="./image/ahoutus.png"/>
+                    <span class="text">关于我们</span>
+                </a>
+            </li>
+            <li class="footer_navbar_li">
+                <img src="./image/welcome.png"/>
+                <a class="left" href="./shehuizeren.html">
+                    <span class="text">社会责任</span>
+                </a>
+            </li>
+            <li class="footer_navbar_li">
                 <a  class="right" href="#">
                     <img src="./image/meitijieshao.png"/>
                     <span class="text">媒体介绍</span>
@@ -151,16 +163,16 @@
                 <div class="right" style="position: relative;">
                     <span class="text">合作伙伴</span>
                     <select>
-                        <option value="">剑桥大学幸福研究院</option>
-                        <option value="">联动天翼科技有限公司</option>
-                        <option value="">全球华人积极心理学会</option>
-                        <option value="">哈佛大学医学院教练中心</option>
+                        <option><a href="http://www.cwichina.org">剑桥大学幸福研究院</a></option>
+                        <option><a href="http://www.linkdata.com.cn">联动天翼科技有限公司</a></option>
+                        <option><a href="http://www.globalcppa.org">全球华人积极心理学会</a></option>
+                        <option><a>哈佛大学医学院教练中心</a></option>
                     </select>
                 </div>
             </li>
 
             <!--  条款 -->
-            <li>
+            <li style="margin-top: 20px">
                 <div class="policy">
                     <a href="#"><span>隐私政策</span></a>
                     <a href="#"><span>使用条款</span></a>
