--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -136,7 +136,7 @@
                 </a>
             </li>
             <li class="footer_navbar_li">
-                <a  class="right" href="#">
+                <a  class="right" href="javascript:void(0);">
                     <img src="./image/meitijieshao-blue.png"/>
                     <span class="text-blue">媒体介绍</span>
                 </a>
@@ -158,11 +158,11 @@
                 <img src="./image/hezuohuoban-blue.png"/>
                 <div class="right" style="position: relative;">
                     <span class="text-blue">合作伙伴</span>
-                    <select>
-                        <option><a href="http://www.cwichina.org">剑桥大学幸福研究院</a></option>
-                        <option><a href="http://www.linkdata.com.cn">联动天翼科技有限公司</a></option>
-                        <option><a href="http://www.globalcppa.org">全球华人积极心理学会</a></option>
-                        <option><a>哈佛大学医学院教练中心</a></option>
+                    <select id="hezuohuoban_select">
+                        <option data-url="http://www.cwichina.org">剑桥大学幸福研究院</option>
+                        <option data-url="http://www.linkdata.com.cn">联动天翼科技有限公司</option>
+                        <option data-url="http://www.globalcppa.org">全球华人积极心理学会</option>
+                        <option>哈佛大学医学院教练中心</option>
                     </select>
                 </div>
             </li>
