--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -67,7 +67,7 @@
     <div class="airbobot_info">
         <p>我们相信，结合人文、科学、科技以解决人类的心理需求，是让人类更健康更幸福的最好方法之一。</p>
 
-        <p>因此，我们聚集了来自剑桥、哈佛、北大等世界级的心理学家、医学家和人工智能专家，以及前谷歌、华为罗德岛的工程师与设计师，一起尝试去打造一款激动人心的产品。我们把这款智能机器人叫做阿啦叮（Ai-robot），你的身心健康小管家。</p>
+        <p>因此，我们聚集了来自剑桥、哈佛、北大等世界级的心理学家、医学家和人工智能专家，以及前谷歌、华为罗德岛的工程师与设计师，一起尝试去打造一款激动人心的产品。我们把这款智能机器人叫做阿啦叮（ai-Robot），你的身心健康小管家。</p>
 
         <p>阿啦叮，可以每天精心挑选为你量身订造的心理测试，让你随时了解自己的心理变化；</p>
 
