新闻页修改中

--- a/mobile/welcome.html
+++ b/mobile/welcome.html
@@ -156,7 +156,7 @@
                 </a>
             </li>
             <li class="footer_navbar_li">
-                <a  class="right" href="javascript:void(0);">
+                <a  class="right" href="./meitijieshao.html">
                     <img src="./image/meitijieshao.png"/>
                     <span class="text">媒体介绍</span>
                 </a>
