--- a/mobile/lianxiwomen.html
+++ b/mobile/lianxiwomen.html
@@ -91,7 +91,7 @@
                 </a>
             </li>
             <li class="footer_navbar_li">
-                <a  class="right" href="javascript:void(0);">
+                <a  class="right" href="./meitijieshao.html">
                     <img src="./image/meitijieshao-blue.png"/>
                     <span class="text-blue">媒体介绍</span>
                 </a>
