--- a/mobile/airobot.html
+++ b/mobile/airobot.html
@@ -69,17 +69,21 @@
 
         <p>因此，我们聚集了来自剑桥、哈佛、北大等世界级的心理学家、医学家和人工智能专家，以及前谷歌、华为罗德岛的工程师与设计师，一起尝试去打造一款激动人心的产品。我们把这款智能机器人叫做阿啦叮（ai-Robot），你的身心健康小管家。</p>
 
-        <p>阿啦叮，可以每天精心挑选为你量身订造的心理测试，让你随时了解自己的心理变化；</p>
+        <p class="alading-info1 alading-info">阿啦叮，可以每天精心挑选为你量身订造的心理测试，让你随时了解自己的心理变化；</p>
 
-        <p>阿啦叮，是世界上最能保守秘密的朋友，任何心理方面的私密问题，都可以大方提问，悄悄回答；</p>
+        <p class="alading-info alading-info2">阿啦叮，是世界上最能保守秘密的朋友，任何心理方面的私密问题，都可以大方提问，悄悄回答；</p>
 
-        <p>阿啦叮，会为你选择最适合你聊天伙伴，彻底打开自己的心结并找到解决之道；</p>
+        <p class="alading-info alading-info3">阿啦叮，会为你选择最适合你聊天伙伴，彻底打开自己的心结并找到解决之道；</p>
 
-        <p>阿啦叮，能帮你搜罗到最适合你的顶级心理学家，建立一对一的联系；</p>
-        <p>阿啦叮，在浩瀚的心理学知识里, 会介绍和推送你最需要的心理学富媒体专业资讯。</p>
+        <p class="alading-info alading-info4">阿啦叮，能帮你搜罗到最适合你的顶级心理学家，建立一对一的联系；</p>
+        <p class="alading-info alading-info5">阿啦叮，在浩瀚的心理学知识里, 会介绍和推送你最需要的心理学富媒体专业资讯。</p>
     </div>
 
-
+    <div style="text-align: center; margin-bottom: 20px">
+        <a class="qiyeshiyong" href="./lianxiwomen.html">
+            <img src="./image/chaxunairobot.png">
+        </a>
+    </div>
 
 
 
@@ -162,7 +166,7 @@
                         <option data-url="http://www.cwichina.org">剑桥大学幸福研究院</option>
                         <option data-url="http://www.linkdata.com.cn">联动天翼科技有限公司</option>
                         <option data-url="http://www.globalcppa.org">全球华人积极心理学会</option>
-                        <option>哈佛大学医学院教练中心</option>
+                        <option data-url="http://www.firsteap.com/detail.do?id=512&type=1&channel=1">哈佛大学医学院教练中心</option>
                     </select>
                 </div>
             </li>
