--- a/mobile/index.html
+++ b/mobile/index.html
@@ -157,7 +157,7 @@
                             <option data-url="http://www.cwichina.org">剑桥大学幸福研究院</option>
                             <option data-url="http://www.linkdata.com.cn">联动天翼科技有限公司</option>
                             <option data-url="http://www.globalcppa.org">全球华人积极心理学会</option>
-                            <option>哈佛大学医学院教练中心</option>
+                            <option data-url="http://www.firsteap.com/detail.do?id=512&type=1&channel=1">哈佛大学医学院教练中心</option>
                         </select>
                     </div>
                 </li>
