--- a/mobile/meitijieshao.html
+++ b/mobile/meitijieshao.html
@@ -31,205 +31,220 @@
     </a>
 </div>
 
-<div class="my_page" style="background-color: white;">
+<div class="my_page">
     <!--<img class="info_img" src="./image/us.jpg"/>-->
     <div class="meiti-content">
-        <div class="meiti-left">
+        <div class="meiti-left" id="meiti-left">
             <div class="one_meiti">
-               <div class="one_meiti_img"> <img src="./image/boao.png"/></div>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+               <div class="one_meiti_img"> <img src="./image/boao.jpg"/></div>
+                <div class="one_meiti_date">2014-05-04</div>
+                <div class="one_meiti_content">经济政策的新目标－幸福</div>
+                <div class="one_meiti_date">2014-04-06 </div>
+                <div class="one_meiti_content">企业影响力，亚洲经济发展的新坐标</div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img">  <img src="./image/harvard.png"/></div>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img">  <img src="./image/harvard.jpg"/></div>
+                <div class="one_meiti_date">2014-04-03</div>
+                <div class="one_meiti_content">以“优势为本”培养领导力</div>
+                <div class="one_meiti_date">2014-07-02</div>
+                <div class="one_meiti_content">企业的社会责任有什么用？</div>
+                <div class="one_meiti_date">2013</div>
+                <div class="one_meiti_content">生产更幸福的商品</div>
+                <div class="one_meiti_date">2013</div>
+                <div class="one_meiti_content">员工越幸福，企业越“发福”</div>
+                <div class="one_meiti_date">2013年第4期（4月）</div>
+                <div class="one_meiti_content">等级制与投入</div>
+
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img"> <img src="./image/forbes.png"/></div>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img"> <img src="./image/staffers.jpg"/></div>
+                <div class="one_meiti_date">2013-05-09</div>
+                <div class="one_meiti_content">职场恶人的剖析与救赎</div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img"> <img src="./image/financial.png"/></div>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img"> <img src="./image/businiss.jpg"/></div>
+                <div class="one_meiti_date">2013-04期</div>
+                <div class="one_meiti_content">企业结盟心理学</div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img">  <img src="./image/sinacaijing.png"/></div>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img">  <img src="./image/xincaijing.jpg"/></div>
+                <div class="one_meiti_date">2013-03期</div>
+                <div class="one_meiti_content">幸福的感悟</div>
             </div>
+            <div class="one_meiti">
+                <div class="one_meiti_img"> <img src="./image/forbes.jpg"/></div>
+                <div class="one_meiti_date">2014-03-20</div>
+                <div class="one_meiti_content">建设幸福城镇：中国会是最幸福的国家吗？</div>
+                <div class="one_meiti_date">2014-02-11</div>
+                <div class="one_meiti_content">乐观是一种可以习得的品格－高西庆</div>
+                <div class="one_meiti_date">2013-12-31</div>
+                <div class="one_meiti_content">最美丽的幸福女性－杨澜</div>
+                <div class="one_meiti_date">2013-11-25</div>
+                <div class="one_meiti_content">投入生活，做最好的自己－李开复</div>
+                <div class="one_meiti_date">2013-08-23</div>
+                <div class="one_meiti_content">幸福的意义在于修行人生－易小迪</div>
+                <div class="one_meiti_date">2013-07-31</div>
+                <div class="one_meiti_content">逆境中的巨人－黄怒波</div>
+                <div class="one_meiti_date">2013-07-17</div>
+                <div class="one_meiti_content">中国企业管理面临新挑战：如何软性发展</div>
+            </div>
+
+
         </div>
-        <div class="meiti-right">
+        <div class="meiti-right" id="meiti-right">
             <div class="one_meiti">
-                <div class="one_meiti_img">  <img src="./image/forture.png"/></div>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img">  <img src="./image/forture.jpg"/></div>
+                <div class="one_meiti_date">2014-03-24</div>
+                <div class="one_meiti_content">老龄社会的幸福起点：满足年长人群的居住需求</div>
+                <div class="one_meiti_date">2013-08-21</div>
+                <div class="one_meiti_content">中国城镇化向幸福出发</div>
+                <div class="one_meiti_date">2013-07-24</div>
+                <div class="one_meiti_content">以强为鉴，可以领发展</div>
+            </div>
+
+            <div class="one_meiti">
+                <div class="one_meiti_img">  <img src="./image/financial.jpg"/></div>
+                <div class="one_meiti_date">2014-04-10</div>
+                <div class="one_meiti_content">博鳌观察之夜：公司的力量－影响力、增长与生活方式</div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img"> <img src="./image/staffers.png"/></div>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img">  <img src="./image/sinacaijing.jpg"/></div>
+                <div class="one_meiti_date">2014-04-10</div>
+                <div class="one_meiti_content">大陆企业增长优秀 日韩企业品牌信任度高</div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img">  <img src="./image/businiss.png"/></div>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img">  <img src="./image/experttheworld.jpg"/></div>
+                <div class="one_meiti_date">2011-05-16</div>
+                <div class="one_meiti_content">A New Gauge to See What’s Beyond Happiness?</div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img">  <img src="./image/xincaijing.png"/></div>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img"> <img src="./image/qq.com.jpg"/></div>
+                <div class="one_meiti_date">2013-01-17</div>
+                <div class="one_meiti_content">剑桥最新研究欧洲23国国民幸福感</div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img">  <img src="./image/experttheworld.png"/></div>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img">  <img src="./image/wangyicaijing.jpg"/></div>
+                <div class="one_meiti_date">2013-02-04</div>
+                <div class="one_meiti_content">“最科学”幸福感量表今年将被引入中国</div>
             </div>
             <div class="one_meiti">
-                <div class="one_meiti_img"> <img src="./image/qq.com.png"/></div>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img">  <img src="./image/sohuxinwen.jpg"/></div>
+                <div class="one_meiti_date">2013-02-04</div>
+                <div class="one_meiti_content">“最科学”幸福感量表已被英国使用</div>
             </div>
             <div class="one_meiti">
-                 <span class="meiti_more">更多媒体...</span>
-                <span>2014-05-04</span><br/>
-                <span>2014-05-04</span><br/>
+                <div class="one_meiti_img">  <img src="./image/gengduomeiti.jpg"/></div>
+                <div class="one_meiti_date">2012-02-13</div>
+                <div class="one_meiti_content">幸福感研究聚焦优化政府公共政策</div>
             </div>
+
         </div>
     </div>
 
+
+
     <!-- 分享 -->
-    <div class=" share-white" style="float: left;">
-        <div class="share">
-            <span>分享给好友</span>
-            <ul class="share-list">
-                <li>
-                    <a class="share-icon"
-                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-img="./image/facebook.png"
-                       data-platform="facebook" data-title="" data-type="facebook"
-                       data-url="http://winnovator.com"
-                       data-ajax="false">
-                        <img src="./image/facebook.png"/>
-                    </a>
-                </li>
-                <li>
-                    <a class="share-icon"
-                       data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-img="./image/weixin.png"
-                       data-platform="weibo" data-title="" data-type="weibo"
-                       data-url="http://winnovator.com"
-                       data-ajax="false">
-                        <img src="./image/weibo.png"/>
-                    </a>
-                </li>
-                <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
-                       data-img="./image/weixin.png"
-                       data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
-                       data-ajax="false">
-                    <img src="./image/weixin_icon.png"/>
+    <div class="share share-white" style="width: 100%;float: left">
+        <span>分享给好友</span>
+        <ul class="share-list">
+            <li>
+                <a class="share-icon"
+                   data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                   data-img="./image/facebook.png"
+                   data-platform="facebook" data-title="" data-type="facebook"
+                   data-url="http://winnovator.com"
+                   data-ajax="false">
+                    <img src="./image/facebook.png"/>
                 </a>
-                </li>
-            </ul>
-        </div>
+            </li>
+            <li>
+                <a class="share-icon"
+                   data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                   data-img="./image/weixin.png"
+                   data-platform="weibo" data-title="" data-type="weibo"
+                   data-url="http://winnovator.com"
+                   data-ajax="false">
+                    <img src="./image/weibo.png"/>
+                </a>
+            </li>
+            <li><a class="share-icon" data-description="幸福创客 - 结合知识与科技,为人类打造更幸福、更健康的生活。"
+                   data-img="./image/weixin.png"
+                   data-platform="tencentweibo" data-title="" data-type="txwb" data-url="http://winnovator.com"
+                   data-ajax="false">
+                <img src="./image/weixin_icon.png"/>
+            </a>
+            </li>
+        </ul>
+    </div>
 
 
-        <div class="footer_navbar">
-            <ul>
-                <li class="footer_navbar_li">
-                    <a  class="right" href="./aboutus.html">
-                        <img src="./image/ahoutus.png"/>
-                        <span class="text">关于我们</span>
-                    </a>
-                </li>
-                <li class="footer_navbar_li">
-                    <img src="./image/welcome.png"/>
-                    <a class="left" href="./shehuizeren.html">
-                        <span class="text">社会责任</span>
-                    </a>
-                </li>
-                <li class="footer_navbar_li">
-                    <a  class="right" href="./meitijieshao.html">
-                        <img src="./image/meitijieshao.png"/>
-                        <span class="text">媒体介绍</span>
-                    </a>
-                </li>
-                <li class="footer_navbar_li">
-                    <img src="./image/lianluowomen.png"/>
-                    <a class="left" href="./lianxiwomen.html">
-                        <span class="text">联络我们</span>
-                    </a>
-                </li>
+    <div class="footer_navbar" style="float: none;width: 100%">
+        <ul>
+            <li class="footer_navbar_li">
+                <a  class="right" href="./aboutus.html">
+                    <img src="./image/ahoutus.png"/>
+                    <span class="text">关于我们</span>
+                </a>
+            </li>
+            <li class="footer_navbar_li">
+                <img src="./image/welcome.png"/>
+                <a class="left" href="./shehuizeren.html">
+                    <span class="text">社会责任</span>
+                </a>
+            </li>
+            <li class="footer_navbar_li">
+                <a  class="right" href="./meitijieshao.html">
+                    <img src="./image/meitijieshao.png"/>
+                    <span class="text">媒体介绍</span>
+                </a>
+            </li>
+            <li class="footer_navbar_li">
+                <img src="./image/lianluowomen.png"/>
+                <a class="left" href="./lianxiwomen.html">
+                    <span class="text">联络我们</span>
+                </a>
+            </li>
 
-                <li class="footer_navbar_li">
-                    <a  class="right" href="mailto:service@winnovator.com">
-                        <img src="./image/zaixiankefu.png"/>
-                        <span class="text">在线客服</span>
-                    </a>
-                </li>
-                <li class="footer_navbar_li">
-                    <img src="./image/hezuohuoban.png"/>
-                    <div class="right" style="position: relative;">
-                        <span class="text">合作伙伴</span>
-                        <select id="hezuohuoban_select">
-                            <option data-url="http://www.cwichina.org">剑桥大学幸福研究院</option>
-                            <option data-url="http://www.linkdata.com.cn">联动天翼科技有限公司</option>
-                            <option data-url="http://www.globalcppa.org">全球华人积极心理学会</option>
-                            <option>哈佛大学医学院教练中心</option>
-                        </select>
-                    </div>
-                </li>
+            <li class="footer_navbar_li">
+                <a  class="right" href="mailto:service@winnovator.com">
+                    <img src="./image/zaixiankefu.png"/>
+                    <span class="text">在线客服</span>
+                </a>
+            </li>
+            <li class="footer_navbar_li">
+                <img src="./image/hezuohuoban.png"/>
+                <div class="right" style="position: relative;">
+                    <span class="text">合作伙伴</span>
+                    <select id="hezuohuoban_select">
+                        <option data-url="http://www.cwichina.org">剑桥大学幸福研究院</option>
+                        <option data-url="http://www.linkdata.com.cn">联动天翼科技有限公司</option>
+                        <option data-url="http://www.globalcppa.org">全球华人积极心理学会</option>
+                        <option data-url="http://www.firsteap.com/detail.do?id=512&type=1&channel=1">哈佛大学医学院教练中心</option>
+                    </select>
+                </div>
+            </li>
 
-                <!--  条款 -->
-                <li style="margin-top: 20px">
-                    <div class="policy">
-                        <a href="#"><span>隐私政策</span></a>
-                        <a href="#"><span>使用条款</span></a>
-                    </div>
+            <!--  条款 -->
+            <li style="margin-top: 20px">
+                <div class="policy">
+                    <a href="#"><span>隐私政策</span></a>
+                    <a href="#"><span>使用条款</span></a>
+                </div>
 
-                </li>
-                <li>
-                    <div class="copyright">
-                        Copyright© 2015 幸福创客 版权所有
-                    </div>
+            </li>
+            <li>
+                <div class="copyright">
+                    Copyright© 2015 幸福创客 版权所有
+                </div>
 
-                </li>
-            </ul>
+            </li>
+        </ul>
 
-        </div>
     </div>
 </div>
 
 <script type="text/javascript" src="./js/my_share.js"></script>
+
 
 </body>
 </html>
