--- a/mobile/aboutus.html
+++ b/mobile/aboutus.html
@@ -30,7 +30,7 @@
 </div>
 
     <div class="my_page">
-        <img class="info_img" src="./image/us.jpg">
+        <img class="info_img" src="./image/us_old.jpg">
 
 
         <div class="discreption">
