--- a/mobile/meitijieshao.html
+++ b/mobile/meitijieshao.html
@@ -36,9 +36,9 @@
     <div class="meiti-content">
         <div class="meiti-left" id="meiti-left">
             <div class="one_meiti">
-               <div class="one_meiti_img"> <img src="./image/boao.jpg"/></div>
+                <div class="one_meiti_img"> <img src="./image/boao.jpg"/></div>
                 <div class="one_meiti_date">2014-05-04</div>
-                <div class="one_meiti_content">经济政策的新目标－幸福</div>
+                <div class="one_meiti_content"><a href="http://http://www.boaoreview.org/html/zonglun_Opinions/jinrong__Finance/20140321/2165.html">经济政策的新目标－幸福</a></div>
                 <div class="one_meiti_date">2014-04-06 </div>
                 <div class="one_meiti_content">企业影响力，亚洲经济发展的新坐标</div>
             </div>
